# mate-notification-daemon

./: .build.yml  .docker.json  .gitignore  .travis.yml  AUTHORS  CNAME  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  makepot  mate-notification-daemon.pot  meson.build  meson_options.txt
.tx/: config
2021-02-24-153251-5090-1@59ce19333e00_master/: index.html  report-20e33b.html  report-226cc5.html  report-37f158.html  report-3fdc11.html  report-53e6f1.html  report-57ffa9.html  report-6c5b19.html  report-8a3d1a.html  report-8c5c48.html  report-904d09.html  report-a46c0d.html  report-e85ab6.html  report-f628be.html  report-faa1fa.html
2021-02-24-153321-9008-cppcheck@59ce19333e00_master/: 1.html  4.html
2021-03-08-231228-4668-1@61620f2279c7_master/: index.html  report-1e9625.html  report-24be87.html  report-375a69.html  report-39750e.html  report-4a2a0d.html  report-5b0306.html  report-5c4f49.html  report-773491.html  report-a38d41.html  report-afc648.html  report-b3ccb0.html  report-b79628.html  report-d42faf.html  report-f09a64.html
2021-03-08-231300-0707-cppcheck@61620f2279c7_master/: 2.html  3.html  index.html  stats.html
2021-03-10-110008-4672-1@20792be797da_shadow/: index.html  report-097561.html  report-18a3c2.html  report-19f8be.html  report-1dd45d.html  report-5daadd.html  report-82f788.html  report-86ce29.html  report-9641da.html  report-b1c66f.html  report-c1c312.html  report-cf91be.html  report-dbbef8.html  report-dd5dfe.html  report-e6f413.html
2021-03-10-110037-8452-cppcheck@20792be797da_shadow/: 3.html  4.html  index.html  stats.html
2021-03-15-194620-4675-1@b462aeed6e57_master/: index.html  report-0278c9.html  report-04782b.html  report-1588f0.html  report-240335.html  report-30153a.html  report-94c394.html  report-9e5954.html  report-bd996a.html  report-be1f93.html  report-c8c4a0.html  report-d191b8.html  report-d36c9d.html  report-f9e976.html  report-fbda20.html
2021-03-15-194652-2123-cppcheck@b462aeed6e57_master/: 5.html
2021-03-25-122408-4675-1@28a567134d69_g_memdup/: index.html  report-293b01.html  report-2da7b6.html  report-49147b.html  report-5f5ebd.html  report-6d55fa.html  report-6dbbaa.html  report-843487.html  report-8d9ad3.html  report-9562f8.html  report-97ebea.html  report-b26d39.html  report-bf46b7.html  report-c7b5c9.html  report-cbd6f6.html
2021-03-25-122440-4086-cppcheck@28a567134d69_g_memdup/: 6.html  index.html
2021-03-29-100201-4683-1@9e3ec7d1ff7b_master/: index.html  report-01bfa2.html  report-1c1699.html  report-2a8796.html  report-37710e.html  report-664e5f.html  report-6d1e53.html  report-796abe.html  report-83180b.html  report-94660b.html  report-b4ea32.html  report-b537f5.html  report-b577ab.html  report-e7683c.html  report-f268c5.html
2021-03-29-100232-3864-cppcheck@9e3ec7d1ff7b_master/: 0.html  3.html  index.html
2021-04-03-124746-4639-1@2335bf9e46fe_master/: index.html  report-0b5647.html  report-0d430c.html  report-1840d4.html  report-60bd73.html  report-6f0665.html  report-77164b.html  report-841176.html  report-89d2de.html  report-a4d389.html  report-a7a0d9.html  report-d292c3.html  report-db160b.html  report-db5614.html  report-f09a06.html
2021-04-03-124817-3384-cppcheck@2335bf9e46fe_master/: 4.html
2021-04-25-095628-4649-1@7ec024ad86e4_master/: index.html  report-196b48.html  report-3ca57a.html  report-429249.html  report-490159.html  report-5d26a3.html  report-84090c.html  report-8937f6.html  report-93a297.html  report-983123.html  report-98f1b9.html  report-9ac456.html  report-a4da71.html  report-abb2d5.html  report-dc594e.html
2021-04-25-095700-0318-cppcheck@7ec024ad86e4_master/: index.html
2021-05-30-135053-5069-1@ff41eddae383_master/: index.html  report-046d47.html  report-1ed6af.html  report-2c0096.html  report-385674.html  report-3c4961.html  report-3fed83.html  report-4b58d6.html  report-69997d.html  report-7be01f.html  report-9cd858.html  report-bd8de5.html  report-d094ec.html  report-d24445.html  report-fa2945.html
2021-05-30-135127-6894-cppcheck@ff41eddae383_master/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html
2021-06-22-062344-5084-1@c718bb0026c6_master/: index.html  report-19126f.html  report-1f37c9.html  report-5422da.html  report-6ed9ca.html  report-901e25.html  report-935ea6.html  report-94c48b.html  report-9ef9eb.html  report-a59072.html  report-ade561.html  report-aec599.html  report-b5e243.html  report-c0268c.html  report-d16f88.html
2021-06-22-062419-6559-cppcheck@c718bb0026c6_master/: 1.html  3.html  4.html  5.html  6.html  index.html
2023-09-02-153203-5095-1@c7815ef3b614_master/: index.html  report-0cca72.html  report-0dce24.html  report-5a015b.html  report-6275aa.html  report-7eef74.html  report-895ec8.html  report-c05e5b.html  report-e651ab.html  report-e814f4.html
2023-09-02-153234-1505-cppcheck@c7815ef3b614_master/: 0.html  1.html  10.html  2.html  (+9 more)
data/: Makefile.am  mate-notification-daemon-autostart.desktop.in.in  mate-notification-daemon.convert  mate-notification-daemon.desktop.in.in  mate-notification-properties.desktop.in  meson.build  org.freedesktop.mate.Notifications.service.in  org.mate.NotificationDaemon.gschema.xml  org.mate.NotificationDaemon.gschema.xml.in  org.mate.NotificationDaemon.gschema.xml.in.in  org.mate.applets.MateNotificationApplet.desktop.in.in  org.mate.panel.applet.MateNotificationAppletFactory.service.in
data/icons/: meson.build
src/capplet/: Makefile.am  mate-notification-applet-dbus.c  mate-notification-applet-dbus.h  mate-notification-applet-history.c  mate-notification-applet-history.h  mate-notification-applet-menu.xml  mate-notification-applet.c  mate-notification-properties.1  mate-notification-properties.c  mate-notification-properties.desktop.in  mate-notification-properties.ui  org.mate.notifications.properties.gresource.xml  org.mate.panel.applet.notifications.gresource.xml
src/daemon/: Makefile.am  daemon.c  daemon.h  engines.c  engines.h  mnd-daemon.c  notificationdaemon.xml  sound.c  sound.h  stack.c  stack.h  wayland.c  wayland.h
src/themes/standard/: Makefile.am  theme.c
(+745 files in other folders)
